--- a/scss/styles/_win.scss
+++ b/scss/styles/_win.scss
@@ -1,5 +1,5 @@
 .winxp-style {
-        //win98, win7
+        //win98-style, win7-style
         --sans-serif: "Pixelated MS Sans Serif", Arial;
         /* Color */
         --surface: lightblue;
