[Core] Migrate to Bootstrap 5

--- a/scss/base/_text.scss
+++ b/scss/base/_text.scss
@@ -144,6 +144,11 @@ p {
         hyphens: auto;
 }
 
+// Bootstrap 5 migration
+.text-justify {
+        text-align: justify;
+}
+
 .paragraph-title {
         font-family: $fontBold;
         font-size: 1.6rem;
