--- a/css/dynamic-style.css
+++ b/css/dynamic-style.css
@@ -474,6 +474,10 @@ p {
           hyphens: auto;
 }
 
+.text-justify {
+  text-align: justify;
+}
+
 .paragraph-title {
   font-family: "Agency FB Bold", sans-serif;
   font-size: 1.6rem;
@@ -568,6 +572,16 @@ body {
   text-align: left;
   height: 100vh;
   background-color: RGB(var(--scheme-color));
+}
+
+.row {
+  position: relative;
+  margin-right: -15px;
+  margin-left: -15px;
+}
+
+.col, .col-1, .col-10, .col-11, .col-12, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-auto, .col-lg, .col-lg-1, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-auto, .col-md, .col-md-1, .col-md-10, .col-md-11, .col-md-12, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-auto, .col-sm, .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-auto, .col-xl, .col-xl-1, .col-xl-10, .col-xl-11, .col-xl-12, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-auto {
+  position: relative;
 }
 
 .display-table {
@@ -1769,69 +1783,6 @@ img {
 
 .glass-style ::-webkit-scrollbar {
   width: 8px !important;
-}
-
-.winxp-style {
-  --sans-serif: "Pixelated MS Sans Serif", Arial;
-  /* Color */
-  --surface: lightblue;
-  --button-highlight: #ffffff;
-  --button-face: #dfdfdf;
-  --button-shadow: #808080;
-  --window-frame: #0a0a0a;
-  --dialog-blue: #000080;
-  --dialog-blue-light: #1084d0;
-  --link-blue: #0000ff;
-  /* Spacing */
-  --element-spacing: 8px;
-  --grouped-button-spacing: 4px;
-  --grouped-element-spacing: 6px;
-  --radio-width: 12px;
-  --checkbox-width: 13px;
-  --radio-label-spacing: 6px;
-  --range-track-height: 4px;
-  --range-spacing: 10px;
-  /* Some detailed computations for radio buttons and checkboxes */
-  --radio-total-width-precalc: var(--radio-width) +
-                var(--radio-label-spacing);
-  --radio-total-width: calc(var(--radio-total-width-precalc));
-  --radio-left: calc(-1 * var(--radio-total-width-precalc));
-  --radio-dot-width: 4px;
-  --radio-dot-top: calc(
-                var(--radio-width) / 2 - var(--radio-dot-width) / 2
-        );
-  --radio-dot-left: calc(
-                -1 * (var(--radio-total-width-precalc)) + var(--radio-width) / 2 -
-                        var(--radio-dot-width) / 2
-        );
-  --checkbox-total-width-precalc: var(--checkbox-width) +
-                var(--radio-label-spacing);
-  --checkbox-total-width: calc(var(--checkbox-total-width-precalc));
-  --checkbox-left: calc(-1 * var(--checkbox-total-width-precalc));
-  --checkmark-width: 7px;
-  --checkmark-top: 3px;
-  --checkmark-left: 3px;
-  /* Borders */
-  --border-width: 1px;
-  --border-raised-outer: inset -1px -1px var(--window-frame),
-                inset 1px 1px var(--button-highlight);
-  --border-raised-inner: inset -2px -2px var(--button-shadow),
-                inset 2px 2px var(--button-face);
-  --border-sunken-outer: inset -1px -1px var(--button-highlight),
-                inset 1px 1px var(--window-frame);
-  --border-sunken-inner: inset -2px -2px var(--button-face),
-                inset 2px 2px var(--button-shadow);
-  /* Window borders flip button-face and button-highlight */
-  --border-window-outer: inset -1px -1px var(--window-frame),
-                inset 1px 1px var(--button-face);
-  --border-window-inner: inset -2px -2px var(--button-shadow),
-                inset 2px 2px var(--button-highlight);
-  --border-field: inset -1px -1px var(--button-highlight),
-                inset 1px 1px var(--button-shadow),
-                inset -2px -2px var(--button-face),
-                inset 2px 2px var(--window-frame);
-  --border-status-bar-field: inset -1px -1px var(--button-face),
-                inset 1px 1px var(--button-shadow);
 }
 
 .win98-style {
