--- a/scss/base/_text.scss
+++ b/scss/base/_text.scss
@@ -92,6 +92,10 @@ body {
         font-weight: 400;
 }
 
+.uppercase {
+        text-transform: uppercase;
+}
+
 p {
         font-size: 1.35rem;
 }
