--- a/css/dynamic-style.css
+++ b/css/dynamic-style.css
@@ -428,6 +428,10 @@ body {
   font-weight: 400;
 }
 
+.uppercase {
+  text-transform: uppercase;
+}
+
 p {
   font-size: 1.35rem;
 }
@@ -646,13 +650,6 @@ code {
   font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 
-*,
-::after,
-::before {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-}
-
 .flex-row {
   -ms-flex-direction: row !important;
   -webkit-box-orient: horizontal !important;
@@ -692,7 +689,7 @@ code {
           align-items: center;
 }
 
-/* Spacing utilities */
+/* Spacing utilities from Bootstrap */
 .my-4 {
   margin-top: 1.5rem !important;
 }
@@ -703,6 +700,14 @@ code {
 
 .p-3 {
   padding: 1rem !important;
+}
+
+.p-0 {
+  padding: 0rem !important;
+}
+
+.m-0 {
+  margin: 0 !important;
 }
 
 .image-border,
@@ -2558,6 +2563,9 @@ table,
   --dark-surface-color: RGB(var(--scheme-color));
   --border: 0px solid #fafafa;
   /*-------------------------
+      CONTAINER COMPONENTS
+-------------------------*/
+  /*-------------------------
       FORM COMPONENTS
 -------------------------*/
   /*-------------------------
@@ -2568,6 +2576,11 @@ table,
       BASIC COMPONENTS
 -------------------------*/
   /* BUTTON */
+}
+
+.neu-style .setting-panel {
+  -webkit-box-shadow: inset var(--distance-x) var(--distance-y) var(--blur) var(--spread) var(--scheme-color-darken), inset calc(var(--distance-x) * -1) calc(var(--distance-y) * -1) var(--blur) var(--scheme-color-lighten);
+          box-shadow: inset var(--distance-x) var(--distance-y) var(--blur) var(--spread) var(--scheme-color-darken), inset calc(var(--distance-x) * -1) calc(var(--distance-y) * -1) var(--blur) var(--scheme-color-lighten);
 }
 
 .neu-style .dui-radio .indicator {
@@ -2618,8 +2631,7 @@ table,
 
 .neu-style .dropdown button.focus,
 .neu-style .dropdown button:focus,
-.neu-style .dropdown .dropdown-label,
-.neu-style .dropdown .dropdown-menu {
+.neu-style .dropdown .dropdown-label {
   -webkit-box-shadow: var(--distance-x) var(--distance-y) var(--blur) var(--spread) var(--scheme-color-darken), calc(var(--distance-x) * -1) calc(var(--distance-y) * -1) var(--blur) var(--spread) var(--scheme-color-lighten);
           box-shadow: var(--distance-x) var(--distance-y) var(--blur) var(--spread) var(--scheme-color-darken), calc(var(--distance-x) * -1) calc(var(--distance-y) * -1) var(--blur) var(--spread) var(--scheme-color-lighten);
   background: linear-gradient(145deg, var(--light-surface-color), var(--dark-surface-color));
@@ -2630,17 +2642,28 @@ table,
 }
 
 .neu-style .dropdown button,
-.neu-style .dropdown .dropdown-menu,
 .neu-style .dropdown button:hover,
 .neu-style .dropdown .dropdown-item:hover {
   background-color: RGB(var(--scheme-color));
 }
 
+.neu-style .dropdown .dropdown-menu {
+  background: linear-gradient(145deg, var(--light-surface-color), var(--dark-surface-color));
+  -webkit-box-shadow: inset var(--distance-x) var(--distance-y) var(--blur) var(--spread) var(--scheme-color-darken), inset calc(var(--distance-x) * -1) calc(var(--distance-y) * -1) var(--blur) var(--scheme-color-lighten);
+          box-shadow: inset var(--distance-x) var(--distance-y) var(--blur) var(--spread) var(--scheme-color-darken), inset calc(var(--distance-x) * -1) calc(var(--distance-y) * -1) var(--blur) var(--scheme-color-lighten);
+  background-color: RGB(var(--scheme-color));
+  padding: 10px;
+}
+
 .neu-style .dropdown.show .dropdown-toggle,
-.neu-style .dropdown .dropdown-item:hover,
 .neu-style .dropdown button:hover {
   -webkit-box-shadow: var(--distance-x) var(--distance-y) var(--blur) var(--spread) var(--scheme-color-darken), calc(var(--distance-x) * -1) calc(var(--distance-y) * -1) var(--blur) var(--spread) var(--scheme-color-lighten),  inset var(--distance-x) var(--distance-y) var(--blur) var(--spread) var(--scheme-color-darken), inset calc(var(--distance-x) * -1) calc(var(--distance-y) * -1) var(--blur) var(--scheme-color-lighten);
           box-shadow: var(--distance-x) var(--distance-y) var(--blur) var(--spread) var(--scheme-color-darken), calc(var(--distance-x) * -1) calc(var(--distance-y) * -1) var(--blur) var(--spread) var(--scheme-color-lighten),  inset var(--distance-x) var(--distance-y) var(--blur) var(--spread) var(--scheme-color-darken), inset calc(var(--distance-x) * -1) calc(var(--distance-y) * -1) var(--blur) var(--scheme-color-lighten);
+}
+
+.neu-style .dropdown .dropdown-item:hover {
+  -webkit-box-shadow: var(--distance-x) var(--distance-y) var(--blur) var(--spread) var(--scheme-color-darken), calc(var(--distance-x) * -1) calc(var(--distance-y) * -1) var(--blur) var(--spread) var(--scheme-color-lighten);
+          box-shadow: var(--distance-x) var(--distance-y) var(--blur) var(--spread) var(--scheme-color-darken), calc(var(--distance-x) * -1) calc(var(--distance-y) * -1) var(--blur) var(--spread) var(--scheme-color-lighten);
 }
 
 .neu-style .dropdown button:hover,
@@ -2728,9 +2751,30 @@ table,
   background: linear-gradient(145deg, var(--light-surface-color), var(--dark-surface-color));
 }
 
-.neu-style .button {
+.neu-style .button-wrapper {
+  background-color: RGB(var(--scheme-color));
+  position: relative;
+}
+
+.neu-style .button-wrapper .button {
   background: linear-gradient(145deg, var(--light-surface-color), var(--dark-surface-color));
   border: var(--border);
+}
+
+.neu-style .button-wrapper .button::before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: -7px;
+  bottom: -7px;
+  left: -7px;
+  right: -7px;
+  border-radius: var(--border-radius);
+  border: 1px solid RGB(var(--scheme-color));
+  background-color: RGB(var(--scheme-color));
+  z-index: -1;
+  -webkit-box-shadow: inset var(--distance-x) var(--distance-y) var(--blur) var(--spread) var(--scheme-color-darken), inset calc(var(--distance-x) * -1) calc(var(--distance-y) * -1) var(--blur) var(--scheme-color-lighten);
+          box-shadow: inset var(--distance-x) var(--distance-y) var(--blur) var(--spread) var(--scheme-color-darken), inset calc(var(--distance-x) * -1) calc(var(--distance-y) * -1) var(--blur) var(--scheme-color-lighten);
 }
 
 .neu-style .setting-button {
@@ -2750,7 +2794,6 @@ table,
 .neu-style table thead,
 .neu-style .form-group input:focus,
 .neu-style .form-group textarea:focus,
-.neu-style .setting-panel,
 .neu-style .toggle .indicator {
   -webkit-box-shadow: var(--distance-x) var(--distance-y) var(--blur) var(--spread) var(--scheme-color-darken), calc(var(--distance-x) * -1) calc(var(--distance-y) * -1) var(--blur) var(--spread) var(--scheme-color-lighten);
           box-shadow: var(--distance-x) var(--distance-y) var(--blur) var(--spread) var(--scheme-color-darken), calc(var(--distance-x) * -1) calc(var(--distance-y) * -1) var(--blur) var(--spread) var(--scheme-color-lighten);
