--- a/scss/base/_layout.scss
+++ b/scss/base/_layout.scss
@@ -1,8 +1,3 @@
-*,
-::after,
-::before {
-        box-sizing: border-box;
-}
 .flex-row {
         -ms-flex-direction: row !important;
         flex-direction: row !important;
@@ -25,7 +20,8 @@
         align-items: center;
 }
 
-/* Spacing utilities */
+// TODO: Move to _utils.scss
+/* Spacing utilities from Bootstrap */
 .my-4 {
         margin-top: 1.5rem !important;
 }
@@ -34,4 +30,10 @@
 }
 .p-3 {
         padding: 1rem !important;
+}
+.p-0 {
+        padding: 0rem !important;
+}
+.m-0 {
+        margin: 0 !important ;
 }
