--- a/scss/base/_normalize.scss
+++ b/scss/base/_normalize.scss
@@ -1,5 +1,11 @@
-* {
+*,
+*::after,
+*::before {
         margin: 0;
         padding: 0;
+        box-sizing: inherit;
+}
+
+body {
         box-sizing: border-box;
 }
