Add 'dui' prefix for CSS custom properties to avoid conflict

--- a/components/form/_dropdown.scss
+++ b/components/form/_dropdown.scss
@@ -86,4 +86,5 @@
         transition: all 0.2s ease;
         border-radius: $borderRadius;
         padding: 0.5rem 1rem;
+        // width: 95%;
 }
