--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -2,43 +2,43 @@
         /* Basic colors */
         // --scheme-color: #d4d4d4;
         // --highlight-color: #004b97;
-        --highlight-color-invert: #d4d4d4;
-        --base-color: black; // mostly for text <=> --scheme-color-invert
-        --base-color-mute: #4d4d4d; //lightmute: #b2b2b2
+        --dui-highlight-color-invert: #d4d4d4;
+        --dui-base-color: black; // mostly for text <=> --dui-scheme-color-invert
+        --dui-base-color-mute: #4d4d4d; //lightmute: #b2b2b2
         /* Classification colors */
-        --color-1: #01724b;
-        --color-3: #bc5b00;
-        --color-3: #c40639;
-        --color-1-invert: white;
-        --color-3-invert: white;
-        --color-3-invert: white;
+        --dui-color-1: #01724b;
+        --dui-color-3: #bc5b00;
+        --dui-color-3: #c40639;
+        --dui-color-1-invert: white;
+        --dui-color-3-invert: white;
+        --dui-color-3-invert: white;
         /* Others */
-        --border-radius: 9px;
+        --dui-border-radius: 9px;
 
         // lg
-        --container-max-width: 1100px;
-        --container-padding: 40px;
+        --dui-container-max-width: 1100px;
+        --dui-container-padding: 40px;
         // TODO: sm - md...
 
-        --scheme-color: 212, 212, 212;
-        --highlight-color: 0, 75, 151;
+        --dui-scheme-color: 212, 212, 212;
+        --dui-highlight-color: 0, 75, 151;
 }
 
 //SASS variables just to ease referecing in other SCSS files
-$schemeColor: RGB(var(--scheme-color));
-$highlightColor: RGB(var(--highlight-color));
-$contrastHighlightColor: var(--highlight-color-invert);
-$baseColor: var(--base-color);
-$muteBaseColor: var(--base-color-mute);
+$schemeColor: RGB(var(--dui-scheme-color));
+$highlightColor: RGB(var(--dui-highlight-color));
+$contrastHighlightColor: var(--dui-highlight-color-invert);
+$baseColor: var(--dui-base-color);
+$mutedBaseColor: var(--dui-base-color-mute);
 
-$colorfull1: var(--color-1);
-$colorfull2: var(--color-3);
-$colorfull3: var(--color-3);
-$contrastColorfull1: var(--color-1-invert);
-$contrastColorfull2: var(--color-3-invert);
-$contrastColorfull3: var(--color-3-invert);
+$colorfull1: var(--dui-color-1);
+$colorfull2: var(--dui-color-3);
+$colorfull3: var(--dui-color-3);
+$contrastColorfull1: var(--dui-color-1-invert);
+$contrastColorfull2: var(--dui-color-3-invert);
+$contrastColorfull3: var(--dui-color-3-invert);
 
-$borderRadius: var(--border-radius);
+$borderRadius: var(--dui-border-radius);
 $transitionDuration: 0.8s;
 
 /* FONT */
