--- a/scss/styles/_flat.scss
+++ b/scss/styles/_flat.scss
@@ -45,7 +45,7 @@
         .range-slider__value,
         ::-webkit-scrollbar-track,
         ::-webkit-scrollbar-thumb {
-                box-shadow: none !important;
+                box-shadow: none;
         }
 
         .radio-button-group .button:not(.active),
