--- a/scss/init/_neu.scss
+++ b/scss/init/_neu.scss
@@ -7,8 +7,8 @@
         --spread: 0px;
         --scheme-color-lighten: #e6e6e6;
         --scheme-color-darken: #c2c2c2;
-        --light-surface-color: RGB(var(--scheme-color));
-        --dark-surface-color: RGB(var(--scheme-color));
+        --light-surface-color: RGB(var(--dui-scheme-color));
+        --dark-surface-color: RGB(var(--dui-scheme-color));
         --border: 0px solid #fafafa;
 
         $bgSurface: linear-gradient(
@@ -37,14 +37,20 @@
         $thumbScrollbarBoxShadow: inset $ndx $ndy $b $s $scd,
                 inset $dx $dy $b $s$scl;
 
+        /*-------------------------
+      CONTAINER COMPONENTS
+-------------------------*/
         //add an overlay scheme color on the background image
         .display-content > .container::before {
                 // box-shadow: inset 0 0 0 2000px rgba(var(--scheme-color), 0.85); // PARAM
         }
 
-        /*-------------------------
-      CONTAINER COMPONENTS
--------------------------*/
+        //add a border  on the background image
+        .display-content > .container:not(.none-bg) {
+                // prettier-ignore
+                @include border_pseudo_before(5px, $borderRadius ,$schemeColor, $dropBoxShadow);
+        }
+
         .setting-panel {
                 box-shadow: $insetBoxShadow;
         }
@@ -260,20 +266,17 @@
 
         .button-wrapper {
                 background-color: $schemeColor;
+                box-shadow: $dropBoxShadow;
                 position: relative;
+                // ADHOC: using animation class from Animation.css causes box shadow to disappear
+                animation-name: none;
+                // add an outline in case using image background
+                // TODO: do the same for other drop/concave box shadow components, setting button
+                // prettier-ignore
+                @include border_pseudo_before(7px, $borderRadius ,$schemeColor, $insetBoxShadow);
                 .button {
                         background: $bgSurface;
                         border: var(--border);
-                }
-
-                // add an outline in case using image background
-                // TODO: do the same for other drop/concave box shadow components, setting button
-                .button::before {
-                        // prettier-ignore
-                        @include outline_pseudo(-7px, $borderRadius,1px,solid,$schemeColor);
-                        background-color: $schemeColor;
-                        z-index: -1;
-                        box-shadow: $insetBoxShadow;
                 }
         }
 
@@ -281,7 +284,6 @@
                 background: $bgSurface;
         }
 
-        .button-border,
         .box-border,
         .image-border,
         .badge-border,
