--- a/scss/base/__index.scss
+++ b/scss/base/__index.scss
@@ -3,7 +3,7 @@
 @import "normalize";
 @import "utilities";
 @import "general";
-@import "text";
+@import "typography";
 @import "media";
 @import "container";
 @import "layout";
