--- a/scss/base/_general.scss
+++ b/scss/base/_general.scss
@@ -1,4 +1,4 @@
-// TODO: Separate rules into each component
+// TODO: split to each component and delete this file
 
 // FORM COMPONENTS
 .form-group,
