--- a/scss/base/_media.scss
+++ b/scss/base/_media.scss
@@ -1,3 +1,4 @@
+// TODO: split to each component and delete this file
 @media (min-width: 576px) {
         .container {
                 max-width: 540px;
