--- a/scss/dynamic-style.scss
+++ b/scss/dynamic-style.scss
@@ -1,13 +1,12 @@
 @charset "utf-8";
 
-@import "variables";
-@import "mixins";
+@import "abstracts/_index";
+@import "base/_index";
+@import "../components/basic/_index";
+@import "../components/container/_index";
+@import "../components/form/_index";
+@import "../components/content/_index";
+@import "styles/_index";
+@import "init/_index";
+@import "../backgrounds/_index";
 @import "setting";
-@import "base/index";
-@import "../components/basic/index";
-@import "../components/container/index";
-@import "../components/form/index";
-@import "../components/content/index";
-@import "styles/index";
-@import "init/index";
-@import "../backgrounds/index";
