--- a/scss/base/_utilities.scss
+++ b/scss/base/_utilities.scss
@@ -1,4 +1,4 @@
-/* Utility classes to quickly style HTML w/o writing CSS,
+/* Utility classes to quickly apply common rule by adding class names,
         if a rule contains many declarations, extract to mixin also */
 
 /* Spacing utils from Bootstrap */
@@ -14,6 +14,20 @@
 }
 .m-0 {
         margin: 0 !important ;
+}
+
+/* Flex utils from Bootstrap */
+.flex-row {
+        -ms-flex-direction: row !important;
+        flex-direction: row !important;
+}
+.justify-content-center {
+        -ms-flex-pack: center !important;
+        justify-content: center !important;
+}
+
+.d-flex {
+        display: flex !important;
 }
 
 // to break new line when using float
